--- a/spkg-tools/spkg.conf
+++ b/spkg-tools/spkg.conf
@@ -5,6 +5,9 @@ CFLAGS="-march=native -O2 -pipe"
 CXXFLAGS="${CFLAGS}"
 #CPPFLAGS="${CFLAGS}"
 
+# Use stable x86_64. ~x86_64 for unstable (EXPECT PROBLEMS).
+ARCH="x86_64"
+
 # User to build and test packages with
 BUILD_USER=spkg
 # User to run tests as
