--- a/spkg-tools/spkg.conf
+++ b/spkg-tools/spkg.conf
@@ -1,49 +1,57 @@
-# -j<# of cpu cores + 1>
+####
+## Configuration file for spkg
+
+## -j<# of cpu cores + 1>
 MAKEOPTS="-j"$(( $(grep "cpu cores" /proc/cpuinfo|tail -n1|sed 's,.*:,,') + 1 ))
 #MAKEOPTS="-j1"
+
+## Configure optional GCC optimization flags
 CFLAGS="-march=native -O2 -pipe"
 CXXFLAGS="${CFLAGS}"
-#CPPFLAGS="${CFLAGS}"
+CPPFLAGS="${CFLAGS}"
 
-# Use stable x86_64. ~x86_64 for unstable (EXPECT PROBLEMS).
+## Enable 64 bit for x86 processors
+## x86 for 32bit Architectures.
+## ~x86 or ~x86_64 for unstable branch.
 ARCH="x86_64"
 
-# User to build and test packages with
-BUILD_USER=spkg
-# User to run tests as
-TEST_USER=spkg
-
-# Enable/Disable features via Gentoo-like USE flag.
+## Enable/Disable features via Gentoo-like USE flag.
 #USE="pulseaudio -X -gd harfbuzz -pcre2 ffmpeg"
 
-# USA Users
+## User to build and test packages with
+BUILD_USER=spkg
+## User to run tests as
+TEST_USER=spkg
+
+## USA Users
 export PAGE=letter
-# Everyone else
+## Everyone else
 #export PAGE=A4
 
-# Creates Archives
+## Creates Archives
 BUILD_PACKAGE="no"
 
-# 0 Disable : 1 Enable
-# Probably not a good idea to enable tests globally.
-# instead use --enable-tests
+## 0 Disable : 1 Enable
+## Probably not a good idea to enable tests globally.
+## instead use --enable-tests
 ENABLE_TESTS=0
-# if you read any of the documentation in /usr/share/doc
-# enable this, otherwise disable to save space.
+## if you read any of the documentation in /usr/share/doc
+## enable this, otherwise disable to save space.
 INSTALL_DOCS=0
 
-LOGFILE="pkg-$(date +%Y%m%d).log"
-# Not a good idea to modify anything below this point.
-# Where spkg was installed.
+LOGFILE="%n/%D-%v.log"
+
+## Not a good idea to modify anything below this point.
+## Where spkg was installed.
 INSTALL_PATH="/var/db/spkg/spkg-tools"
 PKG_DB_DIR="/var/db/spkg"
 PKG_CACHE="/var/lib/spkg/data"
 DISTFILES="/var/lib/spkg/files"
 PKG_WORLD="/var/lib/spkg/world"
 LOGDIR="/var/log/spkg"
-# if BUILD_PACKAGE=yes archives will be stored here
+## if BUILD_PACKAGE=yes archives will be stored here
 PKG_ARCHIVE_DIR="/var/lib/spkg/archive"
-# Packages are built within here
+## Packages are built within here
 WORKDIR_BASE="/var/tmp/spkg"
-# Where to install packages
+## Where to install packages
 ROOT="/"
