Add default LOCALES

--- a/spkg-tools/spkg.conf
+++ b/spkg-tools/spkg.conf
@@ -21,6 +21,9 @@ ARCH="x86_64"
 ## User to build and test packages with
 BUILD_USER=spkg
 
+## Locales default is LANGUAGE with a fallback on LANG
+LOCALES="en_US"
+
 ## USA Users
 export PAGE=letter
 ## Everyone else
