Set a limiting USE

--- a/spkg-tools/spkg.conf
+++ b/spkg-tools/spkg.conf
@@ -17,6 +17,7 @@ ARCH="x86_64"
 
 ## Enable/Disable features via Gentoo-like USE flag.
 #USE="pulseaudio -X -gd harfbuzz -pcre2 ffmpeg"
+USE="-java -X -gd -openrc"
 
 ## User to build and test packages with
 BUILD_USER=spkg
