rename LIB to ABILIB assuming LIB was being used whilst building packages and potentially causing issues. rename MULTILIB to ABILIBS add spkg.conf global BUILD_ABI to configure which library ABIs to build. clean-up builds removing unnecessary bootstrap() routines

--- a/spkg-tools/spkg.conf
+++ b/spkg-tools/spkg.conf
@@ -15,6 +15,10 @@ CPPFLAGS="${CFLAGS}"
 ## ~x86 or ~x86_64 for unstable branch.
 ARCH="x86_64"
 
+## Which Library ABIs to install
+## Valid options are 64 x32 and 32
+BUILD_ABI="64"
+
 ## Enable/Disable features via Gentoo-like USE flag.
 #USE="pulseaudio -X -gd harfbuzz -pcre2 ffmpeg"
 USE="-java -X -gd -openrc"
