--- a/spkg.conf
+++ b/spkg.conf
@@ -6,6 +6,7 @@ MAKEOPTS="-j"$(( $(grep "cpu cores" /proc/cpuinfo|tail -n1|sed 's,.*:,,') + 1 ))
 #MAKEOPTS="-j1"
 
 ## Configure optional GCC optimization flags
+## CFLAGS="-march=i686 -O2 -pipe"
 CFLAGS="-march=native -O2 -pipe"
 CXXFLAGS="${CFLAGS}"
 CPPFLAGS="${CFLAGS}"
