Update to use more defaults add CACHE_DIR Update the MAKEOPTS command

--- a/spkg.conf
+++ b/spkg.conf
@@ -2,7 +2,7 @@
 ## Configuration file for spkg
 
 ## -j<# of cpu cores + 1>
-MAKEOPTS="-j"$(( $(grep "cpu cores" /proc/cpuinfo|tail -n1|sed 's,.*:,,') + 1 ))
+MAKEOPTS="-j"$(( $(grep -m1 "cpu cores" /proc/cpuinfo|awk '{print $4}') + 1 ))
 #MAKEOPTS="-j1"
 
 ## Configure optional GCC optimization flags
@@ -45,15 +45,22 @@ LOGFILE="%n/%D-%v.log"
 
 ## Not a good idea to modify anything below this point.
 ## Where spkg was installed.
-INSTALL_PATH="/var/lib/spkg/bin"
-PKG_DB_DIR="/var/db/spkg"
-PKG_CACHE="/var/lib/spkg/data"
-DISTFILES="/var/lib/spkg/files"
-PKG_WORLD="/var/lib/spkg/world"
-LOGDIR="/var/log/spkg"
+#PKG_DB_DIR="/var/db/spkg"
+#LOGDIR="/var/log/spkg"
+## %c category  %d day   %D date (%Y%m%d)  %s Unix Timestamp
+## %n name      %Y year  %m month          %v version with revision
+LOGFILE="%D-%n%v%r.log"
+
+CACHE_DIR="/var/lib/spkg"
+#PKG_CACHE="$CACHE_DIR/data"
+#DISTFILES="$CACHE_DIR/files"
+#PKG_WORLD="$CACHE_DIR/world"
+
 ## if BUILD_PACKAGE=yes archives will be stored here
-PKG_ARCHIVE_DIR="/var/lib/spkg/archive"
+#PKG_ARCHIVE_DIR="$CACHE_DIR/archive"
+
 ## Packages are built within here
-WORKDIR_BASE="/var/tmp/spkg"
+#WORKDIR_BASE="/var/tmp/spkg"
+
 ## Where to install packages
-ROOT="/"
+#ROOT="/"
