Restructured to better organize. Its always bothered me that I have config and 'libraries' files in a bin directory

--- a/etc/spkg.conf
+++ b/etc/spkg.conf
@@ -51,7 +51,7 @@ LOGFILE="%n/%D-%v.log"
 ## %n name      %Y year  %m month          %v version with revision
 LOGFILE="%D-%n%v%r.log"
 
-CACHE_DIR="/var/lib/spkg"
+CACHE_DIR="/var/cache/spkg"
 #PKG_CACHE="$CACHE_DIR/data"
 #DISTFILES="$CACHE_DIR/files"
 #PKG_WORLD="$CACHE_DIR/world"
