%r doesn't exist! change the default log path

--- a/etc/spkg.conf
+++ b/etc/spkg.conf
@@ -49,7 +49,7 @@ LOGFILE="%n/%D-%v.log"
 #LOGDIR="/var/log/spkg"
 ## %c category  %d day   %D date (%Y%m%d)  %s Unix Timestamp
 ## %n name      %Y year  %m month          %v version with revision
-LOGFILE="%D-%n%v%r.log"
+LOGFILE="$n/%D-%v.log"
 
 CACHE_DIR="/var/cache/spkg"
 #PKG_CACHE="$CACHE_DIR/data"
