change arch to a more compatible one, if the user wishes to build it for native instead they may change it

--- a/etc/spkg.conf
+++ b/etc/spkg.conf
@@ -7,7 +7,8 @@ MAKEOPTS="-j"$(( $(grep -m1 "cpu cores" /proc/cpuinfo|awk '{print $4}') + 1 ))
 
 ## Configure optional GCC optimization flags
 ## CFLAGS="-march=i686 -O2 -pipe"
-CFLAGS="-march=native -O2 -pipe"
+#CFLAGS="-march=native -O2 -pipe"
+CFLAGS="-march=x86-64 -O2 -pipe"
 CXXFLAGS="${CFLAGS}"
 CPPFLAGS="${CFLAGS}"
 
